<resources>
    <string name="app_name" translatable="false">MOVAP</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading</string>

    <string name="english">English</string>
    <string name="indonesia">Indonesian</string>

    <!-- Menu -->
    <string name="first_menu">Movie</string>
    <string name="second_menu" translatable="false">TV</string>
    <string name="third_menu">Favourite</string>
    <string name="fourth_menu">Profile</string>

    <!-- Menu Title -->
    <string name="popular_movie">Popular Movies</string>
    <string name="ongoing_movie">Ongoing Movies</string>
    <string name="popular_tv">Popular TV</string>
    <string name="ongoing_tv">Ongoing TV</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!-- Detail Page -->
    <string name="detail_recommendation">Recommendation</string>
    <string name="detail_similar">Similar Movies</string>
    <string name="detail_website" translatable="false">Homepage</string>
    <string name="detail_imdb" translatable="false">IMDB</string>
    <string name="detail_language">Language</string>
    <string name="detail_popularity">Popularity</string>
    <string name="detail_rating">Rating</string>
    <string name="detail_description">Description</string>
    <string name="detail_votes" translatable="false">Votes</string>

    <!-- Favourite Page -->
    <string name="favourite_title">Favourite</string>
    <string name="empty_favourite">You do not have favourites</string>
    <string name="empty_suggestion_favourite">Go check our movie list</string>
    <string name="go_to_movie">Go To Movie Page</string>

    <!-- Log String -->
    <string name="logger_retrofit" translatable="false">RETROFIT LOGGER</string>

    <!-- Toast -->
    <string name="error_general">System Error</string>
    <string name="error_empty_field">Email and password must not be null</string>
    <string name="error_wrong_auth">Email or password is wrong</string>

    <!-- Search -->
    <string name="search_placeholder">Search your favourite film</string>
    <string name="search_placeholder_tv">Search your favourite TV series</string>
    <string name="search_placeholder_movie">Search your favourite movie</string>
    <string name="search_empty">Sorry, movie you are searching for is empty</string>
    <string name="search_empty_suggection">Please try another movie name</string>

    <!-- Information -->
    <string name="information_hello">Hello Fellas!</string>
    <string name="information_thank_you">Thank you for using our application! This application is built for project of our training activity. If you have some suggestions to make this application better, please contact us!</string>
    <string name="information_developer">Introduce our developer</string>

    <!-- Information -->
    <string name="profile_setting">Setting</string>
    <string name="profile_information">Information</string>

    <!-- Setting -->
    <string name="setting_change_language">Change Language</string>

</resources>